--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,17 @@
   font-size: large;
 }
 
+.App-attribute {
+  margin-bottom: 10px;
+}
+
 #wrapper {
   display: flex;
+  padding: 40px;
 }
 
 #left {
   flex: 0 0 50%;
-  padding: 20px;
 }
 
 #left textarea {
@@ -33,6 +37,7 @@
 
 #right {
   flex: 1;
+  padding: 20px;
 }
 
 @keyframes App-logo-spin {
